# TestActionsRepo

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.defs  README.md  configure.sh
.github/workflows/: run_tests.yml
CI/: Dockerfile  third_party.txt
src/: CMakeLists.txt  main.cpp  test.cpp
src/include/: classes.h  functions.h
src/math/: classes.cpp  functions.cpp
